welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:6: error: Missing closing brace `}' assumed here
     nbPas = nbPas+1
     ^